<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parentLayout"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnRegistration"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                app:cardElevation="4dp"
                app:cardCornerRadius="3dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/registrasi" />

                <TextView
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registration"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/blue"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnPresensi"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                app:cardElevation="4dp"
                app:cardCornerRadius="3dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/presensi" />

                <TextView
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/presensi"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/blue"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnUpload"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                app:cardElevation="4dp"
                app:cardCornerRadius="3dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/upload" />

                <TextView
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/blue"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>